send data for more events, save a queue of sent events

--- a/modules/data/webclient/tmpl/index.tmpl
+++ b/modules/data/webclient/tmpl/index.tmpl
@@ -6,7 +6,13 @@
 var nick = "<? VAR Nick ?>";
 var servers = [
 <?LOOP ServerLoop ?>
-"<? VAR Server ?>",
+"<? VAR Name ?>",
+<?ENDLOOP?>
+];
+var channels= [
+<?LOOP ChannelLoop ?>
+{name: "<? VAR Name ?>",
+},
 <?ENDLOOP?>
 ];
 </script>
