--- a/modules/data/webclient/files/style.css
+++ b/modules/data/webclient/files/style.css
@@ -24,7 +24,6 @@ html, body {
     background: #d9d9d9;
     padding: 3px 10px;
     font: bold 12px Arial;
-    -moz-border-radius: 5px 5px 0 0;
     cursor: pointer;
 }
 
@@ -39,7 +38,8 @@ html, body {
     z-index: 2;
     width: 100%;
     height: 100%;
-    background: #eee;
+    background: white;
+    border-top: 1px solid gray;
     display: none;
     padding: 0 10px;
     font: 12px Arial;
@@ -52,12 +52,18 @@ html, body {
 
 section ul {
     list-style: none;
-    margin: 0;
+    float: left;
     padding: 0;
+    margin: 0;
 }
 
-section li {
-    list-style: none;
-    margin-left: 0;
-    padding-left: 0;
+section ul.chat {
+    width: 85%;
+}
+
+section ul.users {
+    background-color: white;
+    width: 14%;
+    height: 100%;
+    border: 2px inset black;
 }
